Boceto básico de la navegación

--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Educación ambiental</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="container-nav">
+        <!-- Logo y titulo -->
+        <div class="logo-y-titulo"></div>
+        <!-- nav -->
+        <div class="navs">
+          <div class="boton-navs">Inicio</div>
+          <div class="boton-navs">App</div>
+          <div class="boton-navs">Nosotros</div>
+          <div class="boton-navs">Contacto</div>
+          <div class="boton-navs">Perfil</div>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
