--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Intercambia artículos que ya no uses por otros que te interesen.">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="styles/style.css" />
     <title>Educación ambiental</title>
   </head>
