--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <title>Educación ambiental</title>
   </head>
   <body>
-    <nav>
-      <div class="container-nav">
-        <!-- Logo y titulo -->
-        <div class="logo-y-titulo"></div>
-        <!-- nav -->
-        <div class="navs">
-          <div class="boton-navs">Inicio</div>
-          <div class="boton-navs">App</div>
-          <div class="boton-navs">Nosotros</div>
-          <div class="boton-navs">Contacto</div>
-          <div class="boton-navs">Perfil</div>
+    <header>
+      <nav>
+        <div class="container-nav">
+          <!-- Logo y titulo -->
+          <div class="logo-y-titulo"></div>
+          <!-- nav -->
+          <div class="navs">
+            <div class="boton-navs">Inicio</div>
+            <div class="boton-navs">App</div>
+            <div class="boton-navs">Nosotros</div>
+            <div class="boton-navs">Contacto</div>
+            <div class="boton-navs">Perfil</div>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </header>
+    <main>
+      
+    </main>
+
   </body>
 </html>
