--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <nav>
       <div class="container-nav">
         <!-- Logo y titulo -->
-        <div class="logo-y-titulo"></div>
+        <div class="logo-y-titulo">
+          <div id="logo"></div>
+          <div id="titulo">
+            Trueque <br />
+            <section>Express</section>
+          </div>
+        </div>
         <!-- nav -->
         <div class="navs">
           <div class="boton-navs">Inicio</div>
