Mejorar la barra de navegación

--- a/index.html
+++ b/index.html
@@ -7,23 +7,18 @@
     <meta name="description" content="Intercambia artículos que ya no uses por otros que te interesen.">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Educación ambiental</title>
+    <title>Mercado de trueques</title>
   </head>
   <body>
     <header>
       <nav>
-        <div class="container-nav">
-          <!-- Logo y titulo -->
+        <!--Mejora de la barra de navegación-->
+        <ul class="main-nav"> <!--aunque nav está arriba ul es el contenedor que tiene todos los links-->
           <div class="logo-y-titulo"></div>
-          <!-- nav -->
-          <div class="navs">
-            <div class="boton-navs">Inicio</div>
-            <div class="boton-navs">App</div>
-            <div class="boton-navs">Nosotros</div>
-            <div class="boton-navs">Contacto</div>
-            <div class="boton-navs">Perfil</div>
-          </div>
-        </div>
+          <li class="btn inicio"><a href="#">Inicio</a></li>
+          <li class="btn nosotros"><a href="#"></a>Nosotros</li>
+          <li class="btn perfil"><a href="#">Perfil</a></li>
+        </ul>
       </nav>
     </header>
     <main>
