Update home page

--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--meta datos agregados-->
-    <meta name="description" content="Intercambia artículos que ya no uses por otros que te interesen.">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="styles/style.css" />
-    <title>Mercado de trueques</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <!--Mejora de la barra de navegación-->
-        <ul class="main-nav"> <!--aunque nav está arriba ul es el contenedor que tiene todos los links-->
-          <div class="logo-y-titulo"></div>
-          <li class="btn inicio"><a href="#">Inicio</a></li>
-          <li class="btn nosotros"><a href="#"></a>Nosotros</li>
-          <li class="btn perfil"><a href="#">Perfil</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      
-    </main>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primer boceto</title>
+    <link rel="stylesheet" href="./styles/style.css"
+</head>
+<body>
+    <section class="hero-section">
+        <nav class="navbar">
+            <div class="nav-left">
+                <ul>
+                    <li><img src="" alt="" class="logo"></li>
+                    <li><a class="nav-item" href="#">Inicio</a></li>
+                    <li><a class="nav-item" href="#">Nosotros</a></li>
+                </ul>
+            </div>
+            <div class="nav-right">
+                <ul>
+                    <li><a class="nav-item" href="#">Registro</a></li>
+                    <li><a class="nav-item" href="#">Perfil</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="hero-content">
+            <h1 class="subtext-shadow">Es tiempo de</h1>
+            <h2 class="title-shadow">Reutilizar</h2>
+            <p class="text-shadow">Dale nueva vida a tus artículos. ¡Cada intercambio es un paso hacia un futuro más sostenible!</p>
+            <a href="#next-section" class="scroll-button">
+                <img src="./assets/down-arrow.png" alt="Scroll Down">
+            </a>
+        </div>
+    </section>
 
-  </body>
+    <section id="next-section" class="content-section">
+        <h2>Artículos</h2>
+
+    </section>
+</body>
 </html>
+
