--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer boceto</title>
-    <link rel="stylesheet" href="./styles/style.css"
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
 <body>
     <section class="hero-section">
         <nav class="navbar">
-            <div class="nav-left">
+            <div data-aos="fade-in" class="nav-left">
                 <ul>
                     <li><img src="" alt="" class="logo"></li>
-                    <li><a class="nav-item" href="#">Inicio</a></li>
-                    <li><a class="nav-item" href="#">Nosotros</a></li>
+                    <li><a data-aos="zoom-in" data-aos-duration="2000" class="nav-item" href="#">Inicio</a></li>
+                    <li><a data-aos="zoom-in" data-aos-duration="2000" class="nav-item" href="#">Nosotros</a></li>
                 </ul>
             </div>
             <div class="nav-right">
                 <ul>
-                    <li><a class="nav-item" href="#">Registro</a></li>
-                    <li><a class="nav-item" href="#">Perfil</a></li>
+                    <li><a data-aos="zoom-in" data-aos-duration="2000" class="nav-item" href="#">Registro</a></li>
+                    <li><a data-aos="zoom-in" data-aos-duration="2000" class="nav-item" href="#">Perfil</a></li>
                 </ul>
             </div>
         </nav>
         <div class="hero-content">
-            <h1 class="subtext-shadow">Es tiempo de</h1>
-            <h2 class="title-shadow">Reutilizar</h2>
-            <p class="text-shadow">Dale nueva vida a tus artículos. ¡Cada intercambio es un paso hacia un futuro más sostenible!</p>
-            <a href="#next-section" class="scroll-button">
+            <h1 class="subtext-shadow" data-aos="fade-up" data-aos-duration="2000">Es tiempo de</h1>
+            <h2 class="title-shadow" data-aos="fade-up" data-aos-duration="2000">Reutilizar</h2>
+            <p class="text-shadow" data-aos="fade-up" data-aos-duration="2000">Dale nueva vida a tus artículos. ¡Cada intercambio es un paso hacia un futuro más sostenible!</p>
+            <a href="#next-section" class="scroll-button" data-aos="slide-up" data-aos-duration="2000">
                 <img src="./assets/down-arrow.png" alt="Scroll Down">
             </a>
         </div>
@@ -37,6 +38,9 @@
         <h2>Artículos</h2>
 
     </section>
+    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
