Organizar |carpetas html

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer boceto</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
             <h2 class="title-shadow" data-aos="fade-up" data-aos-duration="2000">Reutilizar</h2>
             <p class="text-shadow" data-aos="fade-up" data-aos-duration="2000">Dale nueva vida a tus artículos. ¡Cada intercambio es un paso hacia un futuro más sostenible!</p>
             <a href="#next-section" class="scroll-button" data-aos="slide-up" data-aos-duration="2000">
-                <img src="./assets/down-arrow.png" alt="Scroll Down">
+                <img src="../assets/down-arrow.png" alt="Scroll Down">
             </a>
         </div>
     </section>
@@ -40,7 +40,7 @@
     </section>
     
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
 
