crear vista de detalles de producto (html, css y assets)

--- a/html/index.html
+++ b/html/index.html
@@ -85,10 +85,26 @@
         </div>
       </section>
 
-      <section id="next-section" class="content-section">
-        <h2>Artículos</h2>
+      <!------------------Lista de artículos-------------------------->
+      <section class="product-section">
+        <div class="center-text">
+          <h2>Artículos</h2>
+        </div>
+
+        <div class="n-content">
+          <div class="row">
+            <div class="row-img">
+              <img src="" alt="">
+            </div>
+            <h3>Item w/ detail</h3>
+          </div>
+        </div>
       </section>
+
+
+
     </main>
+    <!-----------Librerías y Scripts----------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../script.js"></script>
   </body>
