--- a/html/index.html
+++ b/html/index.html
@@ -74,35 +74,225 @@
             Dale nueva vida a tus artículos. ¡Cada intercambio es un paso hacia
             un futuro más sostenible!
           </p>
-          <a
-            href="#next-section"
-            class="scroll-button"
-            data-aos="slide-up"
-            data-aos-duration="2000"
-          >
-            <img src="../assets/down-arrow.png" alt="Scroll Down" />
-          </a>
-        </div>
-      </section>
-
-      <!------------------Lista de artículos-------------------------->
-      <section class="product-section">
-        <div class="center-text">
-          <h2>Artículos</h2>
-        </div>
-
-        <div class="n-content">
-          <div class="row">
-            <div class="row-img">
-              <img src="" alt="">
-            </div>
-            <h3>Item w/ detail</h3>
+          <div class="button-container">
+            <button
+              type="button"
+              onclick="location.href='#product-section'"
+              class="scroll-button"
+              data-aos="slide-up"
+              data-aos-duration="2000"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                class="svg-down-arrow-icon"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M12 2.25a.75.75 0 0 1 .75.75v16.19l6.22-6.22a.75.75 0 1 1 1.06 1.06l-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 1 1 1.06-1.06l6.22 6.22V3a.75.75 0 0 1 .75-.75Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </section>
 
+      <!------------------Lista de artículos-------------------------->
+      <section id="product-section">
 
+        <div class="product-section-text-container">
+          <div>
+            <h2 class="product-section__title">Nuevos artículos</h2>
+          </div>
+          <div>
+            <p class="product-section__text">Aquí encontrarás tus artículos favoritos para intercambiar por alguno que ya no necesites. Recuerda, ¿para qué tirar si puedes reciclar?</p>
+          </div>
+        </div>
+        
 
+        <div class="card-container">
+          <!--------Carousel--------->
+
+          <!-- Container #1 -->
+          <div class="card">
+            <div class="card-img">
+              <img src="../assets/img1.jpg" alt="image1" />
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 1</h2>
+              <p class="item-location">Huixtla</p>
+              <p class="item-datetime">Hace 1 día</p>
+              <button type="button" class="arrow-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+          <!-- Container #2 -->
+          <div class="card">
+            <div class="card-img">
+              <img src="../assets/img2.jpg" alt="image2" />
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 2</h2>
+              <p class="item-location">Mazatán</p>
+              <p class="item-datetime">Hace 7 días</p>
+            </div>
+            <button type="button" class="arrow-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="svg-arrow-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                />
+              </svg>
+            </button>
+          </div>
+
+          <!-- Container #3 -->
+          <div class="card">
+            <div class="card-img">
+              <img src="../assets/img3.jpg" alt="image3" />
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 3</h2>
+              <p class="item-location">Tapachula</p>
+              <p class="item-datetime">Hace 3 horas</p>
+              <button type="button" class="arrow-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+          <!-- Container #1 -->
+          <div class="card">
+            <div class="card-img">
+              <img src="../assets/img1.jpg" alt="image1" />
+              <button type="button" class="like-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-heart-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="card-content">
+              <h2 class="item-name">Artículo 4</h2>
+              <p class="item-location">Huixtla</p>
+              <p class="item-datetime">Hace 5 días</p>
+              <button type="button" class="arrow-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="svg-arrow-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </section>
     </main>
     <!-----------Librerías y Scripts----------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
