--- a/html/product-details.html
+++ b/html/product-details.html
@@ -30,8 +30,121 @@
           <p class="product-user">Subido por: Juan Pérez</p>
           <p class="product-date">Publicado el: 10 de septiembre de 2024</p>
           <p class="product-description">
-            Esta es la descripción del artículo que contendra ciertos detalles para que los usuarios puedan decidir intercambiar o no.
+            Esta es la descripción del artículo que contendra ciertos detalles
+            para que los usuarios puedan decidir intercambiar o no.
           </p>
+
+          <!----------------------------------Form------------------------------------------------->
+          <section class="form-container">
+            <div class="profile-section">
+              <div class="profile-avatar">
+                <!-- Espacio para tu ícono de perfil -->
+                <span>U</span>
+              </div>
+              <div class="profile-info">
+                <h2>Usuario</h2>
+                <p>Publica desde hace 1 año | Activo hoy</p>
+                <p>Correo electrónico verificado</p>
+              </div>
+            </div>
+
+            <div class="button-section">
+              <button class="email-button">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+                  />
+                </svg>
+
+                Email
+              </button>
+              
+              <div class="divider"></div>
+
+              <button class="favourite-button">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
+                  />
+                </svg>
+
+                Favourite
+              </button>
+              <button class="report-button">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z"
+                  />
+                </svg>
+
+                Report
+              </button>
+            </div>
+
+            <div class="report-section">
+              <h3>Report this ad</h3>
+              <form>
+                <label>
+                  <input type="radio" name="report" value="fraudulent" />
+                  This is illegal/fraudulent
+                </label>
+                <label>
+                  <input type="radio" name="report" value="spam" />
+                  This ad is spam
+                </label>
+                <label>
+                  <input type="radio" name="report" value="duplicate" />
+                  This ad is a duplicate
+                </label>
+                <label>
+                  <input type="radio" name="report" value="wrong-category" />
+                  This ad is in the wrong category
+                </label>
+                <label>
+                  <input type="radio" name="report" value="posting-rules" />
+                  The ad goes against posting rules
+                </label>
+
+                <textarea
+                  placeholder="Please provide more information"
+                ></textarea>
+
+                <div class="button-group">
+                  <button class="cancel-button" type="button">Cancel</button>
+                  <button class="send-report-button" type="submit">
+                    Send report
+                  </button>
+                </div>
+              </form>
+            </div>
+          </section>
 
           <div class="contact-info">
             <h3>Contacto del dueño:</h3>
