--- a/html/index.html
+++ b/html/index.html
@@ -54,11 +54,13 @@
     </header>
     <main>
       <section class="hero-section">
+
         <div class="wrapper">
           <span class="icon-close"
             ><ion-icon name="close-outline"></ion-icon
           ></span>
 
+          <!-- Primer formulario - Iniciar sesión -->
           <div class="form-box login">
             <h2>Iniciar sesión</h2>
             <form action="#">
@@ -95,18 +97,10 @@
           </div>
         </div>
 
-        <!-- <div class="form-box register">
+        <!-- Segundo formulario - Regístrate -->
+        <!-- <div class="form-box login">
           <h2>Regístrate</h2>
           <form action="#">
-
-            <div class="input-box"></div>
-              <span class="icon">
-                <ion-icon name="person"></ion-icon>
-              </span>
-              <input type="text" required />
-              <label>Usuario</label>
-            </div>
-
             <div class="input-box">
               <span class="icon">
                 <ion-icon name="mail"></ion-icon>
@@ -137,8 +131,10 @@
               </p>
             </div>
           </form>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
+
+      </div>
 
         <div class="hero-content">
           <h1
