--- a/html/upload-form.html
+++ b/html/upload-form.html
@@ -25,10 +25,10 @@
                 <input type="text" id="title" name="title" placeholder="Escribe el título...">
             </div>
 
-            <!-- Campo para el nombre -->
+            <!-- Campo para la descripción -->
             <div class="input-item">
-                <label for="name">Nombre</label>
-                <input type="text" id="name" name="name" placeholder="Escribe el nombre...">
+                <label for="name">Descripción</label>
+                <input type="text" id="caption" name="caption" placeholder="Escribe la descripción...">
             </div>
 
             <!-- Campo para la ubicación -->
